--- a/react-app/src/styles/components/header.scss
+++ b/react-app/src/styles/components/header.scss
@@ -12,6 +12,12 @@
     width: 100%;
     position: absolute;
     z-index: 3;
+
+  & + .awssld {
+    .awssld--active {
+      z-index: -1;
+    }
+  }
 }
 
 #header {
